--- a/src/app/components_css/Navbar.module.css
+++ b/src/app/components_css/Navbar.module.css
@@ -1,3 +1,27 @@
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #a3c6d9;
+    position: relative;
+    height: 50px;
+    top: 0;
+    z-index: 100;
+    padding: 0.75rem 2rem;
+    width: 96vw;
+    margin-left: calc(-50vw + 50%);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.text {
+    color:#1A2C3B;
+    font-family: "Open Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
